# Training-BDD-with-Behave

./: README.md  pyproject.toml
features/: testando_behave.feature
features/steps/: steps.py
