[tool.poetry]
name = "Training-BDD-with-Behave"
version = "0.1.0"
description = ""
authors = ["Hellyson Herik <hherik96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
behave = "^1.2.6"
selenium = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
